[package]
authors = ["Cameron Kinsella <ckinsella@uwaterloo.ca>", "Adam Barroso <adam.barroso@uwaterloo.ca>"]
name = "mikoto-bot"
version = "0.0.1"
edition = "2021"
description = "MTE 380 robot embedded software for the STM32 NUCLEO-f401RE development board"
repository = "https://github.com/cameronkinsella/mikoto-bot"
readme = "README.md"
license = "MIT"
keywords = [
    "arm",
    "cortex-m",
    "stm32f401",
    "nucleo",
]
categories = [
    "embedded",
    "no-std",
]

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
cortex-m-rtic = "1"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.14", features = ["rt", "stm32f401", "usb_fs", "defmt"] }
defmt-rtt = "0.4"
defmt = "0.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
libm = "0.2.6"

[dev-dependencies]
dwt-systick-monotonic = "1.0.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = false
opt-level = 3
overflow-checks = false
